# VkCore

./: CMakeLists.txt  app.cpp  main.cpp  shader.slang
include/: app.hpp  utils.hpp
shaders/: compile.bat
